fdo#76409: Write output cell string to <text:p> element when saving to ods.

The change was made by accident.

Change-Id: Ife2461b0fca6e3ea5a65d72d985d1e0976737b5a